salesforce-migration/force-app/main/default/objects/Bouquet_Notification_Event__e/Bouquet_Notification_Event__e.object-meta.xml
<CustomObject>
    <label>Bouquet Notification Event</label>
    <pluralLabel>Bouquet Notification Events</pluralLabel>
</CustomObject>