salesforce-migration/force-app/main/default/objects/Bouquet_Notification_Event__e/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <label>Order Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>