salesforce-migration/force-app/main/default/objects/Bouquet_Notification_Event__e/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>